--- a/concierto/web/src/main/webapp/WEB-INF/css/formStyle.css
+++ b/concierto/web/src/main/webapp/WEB-INF/css/formStyle.css
@@ -1,26 +1,52 @@
 @CHARSET "ISO-8859-1";
 
+
+
+
 ::-webkit-input-placeholder {
-   color: red;
+    color: grey;
+   font-family: cursive; 
 }
 
 :-moz-placeholder { /* Firefox 18- */
-   color: red;  
+    color: grey;
+   font-family: cursive; 
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
-   color: red;  
+    color: grey;
+   font-family: cursive; 
 }
 
 :-ms-input-placeholder {  
-   color: red;  
+   color: grey;
+   font-family: cursive;  
+}
+
+
+	
+*{
+   margin:0;
+   padding:0;
+}
+ 
+body{
+   text-align:center; /*For IE6 Shenanigans*/
+}
+ 
+
+
+.contact_form {
+	width:960px;
+	margin: 0px auto;
+	text-align:left;
 }
 
 .contact_form ul {
     width:750px;
     list-style-type:none;
     list-style-position:outside;
-    margin:0px;
+    margin:0px auto;
     padding:0px;
 }
 .contact_form li{
@@ -56,3 +82,65 @@
 
 
 .contact_form button {margin-left:156px;}
+
+
+button.submit {
+    background-color: #68b12f;
+    background: -webkit-gradient(linear, left top, left bottom, from(#68b12f), to(#50911e));
+    background: -webkit-linear-gradient(top, #68b12f, #50911e);
+    background: -moz-linear-gradient(top, #68b12f, #50911e);
+    background: -ms-linear-gradient(top, #68b12f, #50911e);
+    background: -o-linear-gradient(top, #68b12f, #50911e);
+    background: linear-gradient(top, #68b12f, #50911e);
+    border: 1px solid #509111;
+    border-bottom: 1px solid #5b992b;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    box-shadow: inset 0 1px 0 0 #9fd574;
+    -webkit-box-shadow: 0 1px 0 0 #9fd574 inset ;
+    -moz-box-shadow: 0 1px 0 0 #9fd574 inset;
+    -ms-box-shadow: 0 1px 0 0 #9fd574 inset;
+    -o-box-shadow: 0 1px 0 0 #9fd574 inset;
+    color: white;
+    font-weight: bold;
+    padding: 6px 20px;
+    text-align: center;
+    text-shadow: 0 -1px 0 #396715;
+}
+button.submit:hover {
+    opacity:.85;
+    cursor: pointer; 
+}
+button.submit:active {
+    border: 1px solid #20911e;
+    box-shadow: 0 0 10px 5px #356b0b inset; 
+    -webkit-box-shadow:0 0 10px 5px #356b0b inset ;
+    -moz-box-shadow: 0 0 10px 5px #356b0b inset;
+    -ms-box-shadow: 0 0 10px 5px #356b0b inset;
+    -o-box-shadow: 0 0 10px 5px #356b0b inset;
+     
+}
+
+.errorMessage {
+	color:red;
+}
+
+#radioButtons {
+	margin-left: 140px;
+	
+}
+
+#radioButtons li {
+	padding-bottom: 5px;
+	padding-top: 5px;
+	
+}
+
+#radioButtons label{
+	width: 20px;
+	margin-top: 0px;
+	padding-right: 15px;
+}
